# autobloggy

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  config.yaml  program.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.github/workflows/: ci.yml
docs/: simplify.md  speed-boost-opportunities.md
docs/prd/: future-work.md  intake-brief-refactor.md  visual-generation.md
portfolio/: README.md
posts/capacity-utilization-myth-why-teams-at-100-utilization-are-less-productive/: draft.qmd  outline.md  strategy.md
posts/claude-code-notebooklm/: brief.md  claims.yaml  draft.qmd  outline.md  sources.yaml  strategy.md
posts/claude-notebooklm-pipeline/: draft.qmd  outline.md  strategy.md
posts/nps-alternatives/: brief.md  claims.yaml  draft.qmd  outline.md  sources.yaml  strategy.md
posts/the-difference-between-claude-desktop-extensions-plugins-extensions-skills-mcps-and-related-terms/: draft.qmd  outline.md  strategy.md
presets/: README.md
presets/default/: brand_guide.md  preset.yaml  strategy_template.md  template.html  writing_guide.md
presets/georgian/: brand_guide.md  preset.yaml  strategy_template.md  (+2 more)
prompts/: quality_criteria.md  stage_attempt.md  verifier_rubrics.md
scripts/: install.sh  relink-local-skills.sh
shared/: banned_patterns.yaml
tests/: conftest.py  helpers.py  test_checks.py  test_claims.py  test_docs.py  test_export.py  test_new_post.py  test_normalize_source.py  test_prepare.py  test_scoring.py  test_sources.py  test_tasks.py  test_verifiers.py  test_visual_verifiers.py  test_workflow.py
tools/: README.md
(+114 files in other folders)
